@@ -1,3 +1,6 @@
+X   X
+    * Change Boots + Punch = hover jump, now activate by double-tapping shift
+
 2012-02-18  0.5.7
     * Add Bow + Respiration = stapled arrows (attach adjacent item in inventory)
     * Add Bow + Silk Touch = magnetic arrows (transport nearby entity)
